--- a/salesforce-redirect.html
+++ b/salesforce-redirect.html
@@ -28,7 +28,7 @@
 
       if (isMobile) {
         // Try to open the mobile app
-        window.location.href = "salesforce://";
+        window.location.href = "salesforce1://";
         // Fallback to web after short delay
         setTimeout(() => {
           window.location.href = "https://yourdomain.my.salesforce.com"; // replace with your custom domain
