--- a/salesforce-redirect.html
+++ b/salesforce-redirect.html
@@ -31,11 +31,11 @@
         window.location.href = "salesforce1://";
         // Fallback to web after short delay
         setTimeout(() => {
-          window.location.href = "https://yourdomain.my.salesforce.com"; // replace with your custom domain
+          window.location.href = "https://rndc-cgcloud.my.salesforce.com"; // replace with your custom domain
         }, 2000);
       } else {
         // Desktop goes straight to Salesforce web
-        window.location.href = "https://yourdomain.my.salesforce.com"; // replace with your custom domain
+        window.location.href = "https://rndc-cgcloud.my.salesforce.com"; // replace with your custom domain
       }
     }
   </script>
