--- a/salesforce-redirect.html
+++ b/salesforce-redirect.html
@@ -2,43 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Open Salesforce</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body { font-family: sans-serif; text-align: center; padding: 50px; }
-    button {
-      padding: 12px 20px;
-      font-size: 18px;
-      background-color: #00A1E0;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-  </style>
-</head>
-<body>
-  <h2>Open Salesforce</h2>
-  <p>Click the button below to open Salesforce.</p>
-  <button onclick="handleRedirect()">Launch Salesforce</button>
-
+  <title>Redirecting to Salesforce</title>
   <script>
-    function handleRedirect() {
+    function redirectToSalesforce() {
       const userAgent = navigator.userAgent || navigator.vendor || window.opera;
       const isMobile = /android|iphone|ipad|ipod/i.test(userAgent);
 
       if (isMobile) {
-        // Try to open the mobile app
+        // Try to open Salesforce mobile app
         window.location.href = "salesforce1://";
-        // Fallback to web after short delay
+
+        // Fallback to web login after 2 seconds if app is not installed
         setTimeout(() => {
-          window.location.href = "https://rndc-cgcloud.my.salesforce.com"; // replace with your custom domain
+          window.location.href = "https://rndc-cgcloud.my.salesforce.com"; // <-- Replace with your domain
         }, 2000);
       } else {
-        // Desktop goes straight to Salesforce web
-        window.location.href = "https://rndc-cgcloud.my.salesforce.com"; // replace with your custom domain
+        // Desktop users go directly to Salesforce web
+        window.location.href = "https://rndc-cgcloud.my.salesforce.com"; // <-- Replace with your domain
       }
     }
+
+    window.onload = redirectToSalesforce;
   </script>
+</head>
+<body>
+  <p>Redirecting to Salesforce...</p>
 </body>
 </html>
 
