--- a/salesforce-redirect.html
+++ b/salesforce-redirect.html
@@ -10,7 +10,7 @@
 
       if (isMobile) {
         // Try to open Salesforce mobile app
-        window.location.href = "salesforce1://";
+        window.location.href = "salesforce1://login";
 
         // Fallback to web login after 2 seconds if app is not installed
         setTimeout(() => {
